@@ -1,0 +1,10 @@
+#ifdef __CINT__
+#pragma link off all globals;
+#pragma link off all classes;
+#pragma link off all functions;
+#pragma link C++ nestedclasses;
+
+#pragma link C++ class JetCorrectorParameters+;
+#pragma link C++ class JetCorrectorParameters::Definitions+;
+#pragma link C++ class JetCorrectorParameters::Record+;
+#endif // __CINT__
